Window title changed to "Apply Changes?" in Display panel isn't reset
When the display configuration is changed in the Display panel, the window title (not only the title displayed in the header) is set to "Apply Changes?" and will not be reset back to "Settings".
Steps to reproduce:
- Open GNOME Settings
- Open the Displays panel
- Change an option inside the panel
- Switch to any other panel
- Open the activities view and hover the Settings app, the title will be "Apply Changes?" until the app is reopened.
Edited by Benjamin Berg