display: Reset the window title after removing custom headerbar

As the main headerbar used by the shell is split, the title is not
propagated to the window. However, the "apply" header bar is not split
and the title is propagated to the toplevel GtkWindow.

Fix this issue by resetting the window title again.

Fixes https://gitlab.gnome.org/GNOME/gnome-control-center/issues/81